fix: main title alignment

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -27,8 +27,9 @@
 
 .title {
   text-align: center;
+  line-height: 1;
   color: var(--white);
-  margin-bottom: 32px;
+  margin-block: 28px 32px;
   font-size: clamp(24px, 12vw, 64px);
   font-weight: bold;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.15), 0 0 8px rgba(0, 0, 0, 0.1);
